--- a/Flask/templates/leaders-form.html
+++ b/Flask/templates/leaders-form.html
@@ -19,6 +19,12 @@
                 <option value="Airship">Airship</option>
             </select>
             <br />
+            <label for="player_count">Total Players</label>
+            <input type="number" min="4" max="15" step="1" value="10" name="player_count" id="player_count" />
+            <br />
+            <label for="impostor_count">Impostors</label>
+            <input type="number" min="1" max="3" step="1" value="2" name="impostor_count" id="impostor_count" />
+            <br />
             <label for="confirm_ejects">Confirm Ejects</label>
             <input type="checkbox" name="confirm_ejects" id="confirm_ejects" checked />
             <br />
